--- a/src/pages/admin/adminCommon.css
+++ b/src/pages/admin/adminCommon.css
@@ -14,10 +14,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     padding: 0.5rem;
     max-width: 100%;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 
 /* Títulos para cada sección */
@@ -36,12 +38,15 @@
 .table-responsive {
     width: 100%;
     margin: 0;
+    overflow-y: auto;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     position: relative;
     z-index: 1;
+    height: calc(100vh - 12rem);
+    flex: 1;
 }
 
 /* Estilos para las tablas */
