--- a/src/pages/admin/adminPanel/AdminPanel.css
+++ b/src/pages/admin/adminPanel/AdminPanel.css
@@ -151,13 +151,15 @@
     overflow-y: auto;
     padding: 1.5rem;
     position: relative;
+    background-color: #ffffff;
+    padding: 1rem;
 }
 
 /* Contenedor de componentes */
 .tesipedia-admin-component {
-    height: 100%;
-    position: relative;
-    overflow-y: auto;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Estilos de tabla */
